--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -3,10 +3,12 @@
 *************************/
 
 // Primary Colours
-$color-primary: #017ac9; // MSD Blue
-$color-primary-navy: #134276; // MSD Navy
-$color-primary-dark-navy: #162c45; // MSD Dark Navy
-$color-accent: #017AC9;  // Same as MSD Blue
+$color-primary: #017ac9;               // MSD Blue
+$color-primary-navy: #134276;          // MSD Navy
+$color-primary-dark-navy: #162c45;     // MSD Dark Navy
+$color-accent: #017AC9;                // Same as MSD Blue
+$color-primary-dark: #0160a6;          // Darker blue
+$color-primary-darker: #014f8a;        // Even darker blue
 
 
 // Secondary Colours
