--- a/styles/bootstrap/_index.scss
+++ b/styles/bootstrap/_index.scss
@@ -1,3 +1,6 @@
+/// We only bring in the grid from Bootstrap
+/// https://getbootstrap.com/docs/5.3/layout/grid/
+
 // Bootstrap dependencies
 @import 'functions';
 @import 'variables';
