--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -93,8 +93,8 @@
 %button--hollow {
   @extend %button;
   background-color: transparent;
-  color: $color-primary;
-  border: 2px solid $stroke-accent;
+  color: $text-primary;
+  border: 2px solid $stroke-tertiary;
 
   &:hover {
     background-color: $color-shade-blue-10;
