feat(form) formhero structure

--- a/blocks/form/components/formhero/formhero.scss
+++ b/blocks/form/components/formhero/formhero.scss
@@ -2,6 +2,10 @@
 
 .wizard {
   .panel-formhero {
+    legend{
+      display: none;
+    }
+    
     display: flex;
     flex-direction: column;
     align-items: flex-start;
