Styling: wizard and buttons

--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -97,6 +97,7 @@ $color-primary-animated: linear-gradient(
 *************************/
 
 // UI Text
+$text-dark-primary: #333333;
 $text-accent: $color-primary;
 $text-dark: $color-primary-navy;
 $text-primary: $color-grey-black-80;
