--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -93,7 +93,7 @@
 %button--hollow {
   @extend %button;
   background-color: transparent;
-  color: $text-primary;
+  color: $text-dark-primary;
   border: 2px solid $stroke-tertiary;
 
   &:hover {
