--- a/styles/forms/_input.scss
+++ b/styles/forms/_input.scss
@@ -70,9 +70,9 @@ textarea {
    Employment Type Radio Buttons
 *******************************/
 .radio-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: $spacing-200;
+  /* display: flex;
+ * flex-direction: column;
+   gap: $spacing-200;*/
 
   label {
     display: flex;
@@ -91,7 +91,7 @@ textarea {
   }
 
   input[type='radio'] {
-    appearance: none;
+   /* appearance: none;
     width: 1.25rem;
     height: 1.25rem;
     border-radius: 50%;
@@ -100,7 +100,14 @@ textarea {
     cursor: pointer;
     position: relative;
     display: inline-block;
-    margin-left: auto;
+    margin-left: auto;*/
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 0.0625rem;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 0.0625rem;
 
     &:checked {
       background-color: $color-accent;
