--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -58,7 +58,7 @@
   justify-content: center;
   padding: $spacing-300 $spacing-500;
   font-family: $font-family;
-  font-weight: 600;
+  font-weight: normal;
   font-size: 18px;
   line-height: 1.2;
   border-radius: $border-radius-round;
