--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -152,10 +152,10 @@ textarea {
 FORM required asterisk for radio and checkbox group
 ********************/
 
-.radio-group-wrapper[data-required=true],
-.checkbox-group-wrapper[data-required=true] {
-  >legend.field-label::after {
-    content: "*";
+.radio-group-wrapper[data-required='true'],
+.checkbox-group-wrapper[data-required='true'] {
+  > legend.field-label::after {
+    content: '*';
     color: var(--form-error-color);
     padding-inline-start: 0.3125rem;
   }
@@ -183,10 +183,46 @@ main .form form .field-wrapper.field-invalid .field-description {
     left: 0;
     width: 16px;
     height: 16px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M7.16681 9.52825V5.86075H8.83347V9.52825H7.16681Z' fill='%23D03633'/%3E%3Cpath d='M7.16681 10.7506V11.9731H8.83347V10.7506H7.16681Z' fill='%23D03633'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M8.00012 0.199867L15.7105 14.3346H0.289795L8.00012 0.199867ZM8.00012 3.68025L3.09745 12.6679H12.9028L8.00012 3.68025Z' fill='%23D03633'/%3E%3C/svg%3E" );
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16' fill='none'%3E%3Cpath d='M7.16681 9.52825V5.86075H8.83347V9.52825H7.16681Z' fill='%23D03633'/%3E%3Cpath d='M7.16681 10.7506V11.9731H8.83347V10.7506H7.16681Z' fill='%23D03633'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M8.00012 0.199867L15.7105 14.3346H0.289795L8.00012 0.199867ZM8.00012 3.68025L3.09745 12.6679H12.9028L8.00012 3.68025Z' fill='%23D03633'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
   }
 }
 
+main.wizard--bg-dark {
+  background: linear-gradient(135deg, #017ac9 25%, #134276 100%) !important;
+  color: #fff;
+}
+
+main.wizard--bg-light {
+  background: linear-gradient(135deg, #e6f2fa 25%, #bfdef1 100%) !important;
+  color: #333;
+}
+
+/*added this for responsive testing, need to use grids then can remove Rebecca*/
+.typography-wrapper,
+.default-content-wrapper {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1200px; // $max-width-content
+
+  // Fluid side padding: scales between 16px and 64px from mobile to desktop
+  padding-left: clamp(1rem, 5vw, 4rem);
+  padding-right: clamp(1rem, 5vw, 4rem);
+}
+
+// vertically center content within the Wizard
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; // vertically center content
+  min-height: calc(100vh - 160px); // adjust to subtract header + footer height
+  padding: 0 1rem 9rem 1rem;
+  /* background-color: $bg-light-secondary;*/
+}
+
+main > * {
+  margin-top: auto;
+  margin-bottom: auto;
+}
