--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,71 +1,5 @@
-/*
-  The latest file included in this file
-  Will have the highest specificity
-  Overiding the previous style
-
-
-  Class naming is using BEM https://getbem.com/introduction/
-  IE:
-
-  BASE
-  .button (base style. Padding, margin, etc)
-
-  MODIFIER
-  .button--[modifier] (expanding on base style and add it's own style. IE colour, extra padding, etc)
-  IE .button--primary
-
-  STATE
-  .button--is-[state] (for specific style related state NOT hover, focus, etc)
-  IE .button--is-hidden, .button--primary-is-visible
-*/
-
-// TODO: can Block styles moved here too? Will it work in AEM? 🤷🏾
-// Settings contain variables, helpers, utilities that can be used by other files. colour, typography, mixin, etc.
-@use './settings' as *;
+@use './bootstrap';
 @use './base';
 @use './forms';
-@use './settings/colors' as *;
-@use 'settings' as *;
-
-
 // Components
 @use './components';
-
-main.wizard--bg-dark {
-  background: linear-gradient(135deg, #017AC9 25%, #134276 100%) !important;
-  color: #fff;
-}
-
-main.wizard--bg-light {
-  background: linear-gradient(135deg, #E6F2FA 25%, #BFDEF1 100%) !important;
-  color: #333;
-}
-
-
-
-/*added this for responsive testing, need to use grids then can remove Rebecca*/
-.typography-wrapper,
-.default-content-wrapper {
-  width: 100%;
-  margin: 0 auto;
-  max-width: 1200px; // $max-width-content
-
-  // Fluid side padding: scales between 16px and 64px from mobile to desktop
-  padding-left: clamp(1rem, 5vw, 4rem);
-  padding-right: clamp(1rem, 5vw, 4rem);
-}
-
-// vertically center content within the Wizard
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;   // vertically center content
-  min-height: calc(100vh - 160px); // adjust to subtract header + footer height
-  padding: 0 1rem 9rem 1rem;
- /* background-color: $bg-light-secondary;*/
-}
-
-main > * {
-  margin-top: auto;
-  margin-bottom: auto;
-}
