--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -1,5 +1,8 @@
 @use '../../../../styles/settings' as *;
 
+// Add this if not already in your color tokens
+$stroke-selected: #017ac9;
+
 .radio-group--with-icon {
   display: flex;
   flex-wrap: wrap;
@@ -24,6 +27,7 @@
     text-align: center;
     min-height: 140px;
     gap: 20px 0;
+    transition: all 0.2s ease;
 
     &::before {
       order: 1;
@@ -61,9 +65,10 @@
 
   input[type='radio'] {
     &:checked {
-      + label {
+      + .radio-group--with-icon__label {
         background-color: $color-shade-blue-10;
-        border: 2px solid $stroke-accent;
+        border: 2px solid $stroke-selected;
+        color: $text-dark-primary;
 
         &:after {
           left: auto;
@@ -89,6 +94,7 @@
       margin: 0;
       margin-bottom: 8px;
       justify-content: space-between;
+      transition: all 0.2s ease;
 
       &::before {
         order: 1;
@@ -99,6 +105,10 @@
     input {
       &:checked {
         + label {
+          border: 2px solid $stroke-selected;
+          background-color: $color-white;
+          color: $text-dark-primary;
+
           &::after {
             right: 17px;
             top: 17px;
