--- a/styles/forms/_select.scss
+++ b/styles/forms/_select.scss
@@ -13,8 +13,9 @@
   font-family: $font-family;
   font-size: 20px;
   line-height: 120%;
-  appearance: base-select;
+  appearance: none; // changed from base-select to none for broader compatibility
   width: 100%;
+  background-color: $color-white; // <-- Added to give the select a white background
 
   &:focus-visible,
   &:focus,
@@ -22,15 +23,6 @@
   &:hover {
     border-color: $stroke-accent;
     outline: $stroke-accent;
-  }
-
-  &::picker(select) {
-    @include elevation-2;
-    appearance: base-select;
-    border: none;
-    padding: $spacing-200;
-    background-color: $color-white;
-    border-radius: $border-radius-mid;
   }
 
   &::picker-icon {
