--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -143,7 +143,7 @@ $stroke-tertiary: $color-shade-navy-40;
 $stroke-dark: $color-primary-navy;
 $stroke-error: $color-feedback-red;
 $stroke-focus: $color-feedback-pink;
-$stroke-selected: $color-primary;
+$stroke-selected: $color-primary-navy;
 
 // Input stroke widths
 $stroke-input-stroke: 2px;
