feat(grid): first JSP screen

--- a/blocks/form/components/formhero/formhero.scss
+++ b/blocks/form/components/formhero/formhero.scss
@@ -2,50 +2,28 @@
 
 .wizard {
   .panel-formhero {
-    legend{
-      display: none;
-    }
-    
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: left;
+    margin-bottom: 60px;
 
-    @include media('desktop') {
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-      text-align: left;
+    legend {
+      display: none;
     }
   }
 
+  .panel-formhero__inner {
+    @include media('desktop') {
+      align-items: center;
+    }
+  }
   .panel-formhero__picture {
-    width: 100%;
-    max-width: 160px;
     margin-bottom: $spacing-600;
 
     @include media('desktop') {
-      max-width: 240px;
+      margin-bottom: 0;
     }
   }
 
   .panel-formhero__content {
     order: 1;
-    text-align: left;
-
-    // 👇 Universal color style for all headings + text
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p,
-    .strap-title,
-    .strap-title-small,
-    .subtitle {
-      /*color: #ffffff;*/
-    }
 
     h2 {
       @include heading-level-1;
@@ -60,11 +38,6 @@
 
     @include media('desktop') {
       order: 0;
-      width: 36rem;
     }
   }
-}
-
-.wizard .panel-formhero__content p {
-  color: $text-dark;
 }
