--- a/styles/bootstrap/_index.scss
+++ b/styles/bootstrap/_index.scss
@@ -1,3 +1,6 @@
+/// We only bring in the grid from Bootstrap
+/// https://getbootstrap.com/docs/5.3/layout/grid/
+
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import 'functions';
 
@@ -13,3 +16,7 @@
 @import 'maps';
 @import 'mixins';
 @import 'root';
+
+// 6. Include any other optional stylesheet partials as desired; list below is not inclusive of all available stylesheets
+@import 'containers';
+@import 'grid';
