--- a/styles/forms/_checkbox.scss
+++ b/styles/forms/_checkbox.scss
@@ -98,9 +98,9 @@
   }
 }
 
-/******************************
+/**********************************
   Responsive Tweaks (Mobile First)
-******************************/
+**********************************/
 @media (min-width: 744px) {
   .checkbox-group-wrapper.horizontal .checkbox-wrapper {
     flex-direction: row;
