style(grid): JSP centering content, background, spacing

--- a/blocks/form/form.scss
+++ b/blocks/form/form.scss
@@ -1,7 +1,6 @@
 @use '../../styles/settings' as *;
 @use '../../styles/forms' as *;
 
-
 // Fieldset reset
 fieldset {
   padding: 0;
@@ -33,7 +32,9 @@ main .form > div:not(:first-child) {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: $spacing-500 $spacing-400 $spacing-000 $spacing-400;
+  padding: $spacing-500 $spacing-400;
+  max-height: 98px;
+  height: 100%;
 
   .image-wrapper picture {
     max-width: 150px;
