--- a/styles/base/_wizard-buttons.scss
+++ b/styles/base/_wizard-buttons.scss
@@ -22,6 +22,8 @@
 }
 
 .wizard .wizard-button-wrapper {
+  height: 100%;
+  max-height: 83px;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -76,7 +78,10 @@
   justify-content: center;
   align-items: center;
   gap: var(--Spacing-Spacing-200, 8px);
-  font-family: var(--Typography-Font-family-Primary-font, 'Atkinson Hyperlegible Next');
+  font-family: var(
+    --Typography-Font-family-Primary-font,
+    'Atkinson Hyperlegible Next'
+  );
   font-size: var(--Typography-Sizes-Components-Button-default, 20px);
   font-style: normal;
   line-height: 24px;
@@ -86,15 +91,15 @@
   cursor: pointer;
   transition: all 0.25s ease;
   border-radius: var(--Corner-radius-Round, 999px);
-  border: var(--Stroke-weight-Button-stroke, 2px) solid var(--Stroke-Tertiary, #A1B3C8);
-  background: var(--Background-Light-Primary, #FFF);
+  border: var(--Stroke-weight-Button-stroke, 2px) solid
+    var(--Stroke-Tertiary, #a1b3c8);
+  background: var(--Background-Light-Primary, #fff);
   color: var(--Text-Dark-Primary, #333);
 
   /* Elevation-1 */
   box-shadow: var(--Elevation-Position-X-Level-1, 0px)
-  var(--Elevation-Position-Y-Level-1, 2px)
-  var(--Elevation-Blur-Level-1, 4px)
-  var(--Elevation-Spread-Level-1, 0px) rgba(22, 44, 69, 0.20);
+    var(--Elevation-Position-Y-Level-1, 2px) var(--Elevation-Blur-Level-1, 4px)
+    var(--Elevation-Spread-Level-1, 0px) rgba(22, 44, 69, 0.2);
 
   &.default {
     padding: var(--Spacing-Spacing-400, 16px) var(--Spacing-Spacing-500, 24px);
@@ -120,6 +125,6 @@
   &:focus {
     background: var(--Background-Light-Primary, #fff);
     box-shadow: 0px 0px 0px 2px #fff,
-    0px 0px 0px 4px var(--Stroke-Focus, #b53cde);
+      0px 0px 0px 4px var(--Stroke-Focus, #b53cde);
   }
 }
