Styling: button arrows

--- a/blocks/form/components/wizard/background.scss
+++ b/blocks/form/components/wizard/background.scss
@@ -90,7 +90,7 @@ main.wizard--bg-light {
 ------------------------------ */
 main.wizard--bg-dark,
 main.wizard--bg-light {
-  background-image: url('/content/dam/edge-forms-rebecca/vectors/mymsd-unity-pattern.svg');
+  background-image: url('mymsd-unity-pattern.svg');
   background-repeat: no-repeat;
   background-size: auto;
 }
