Styling: Addition of pattern to gradient with responsive states

--- a/blocks/form/components/wizard/background.scss
+++ b/blocks/form/components/wizard/background.scss
@@ -2,11 +2,10 @@
 @use '../../../../styles/settings/colors' as *;
 
 /* ------------------------------
-   Dark Blue Gradient background
+   Wizard Background – Dark
 ------------------------------ */
 main.wizard--bg-dark {
-  background: var(--Gradient-Blue, linear-gradient(135deg, var(--Brand-MSD-Blue, #017AC9) 25%, var(--Brand-MSD-Navy, #134276) 100%));
-  color: var(--Text-Light, #fff);
+  color: $text-white;
 
   .text-wrapper,
   .number-wrapper,
@@ -44,15 +43,10 @@ main.wizard--bg-dark {
 }
 
 /* ------------------------------
-   Light Blue Gradient background
+   Wizard Background – Light
 ------------------------------ */
 main.wizard--bg-light {
-  background: linear-gradient(
-                  135deg,
-                  var(--Shades-Blues-Blue-10, #E6F2FA) 25%,
-                  var(--Shades-Blues-Blue-25, #BFDEF1) 100%
-  );
-  color: var(--Text-Dark, #333);
+  color: $text-dark-primary;
 
   h1,
   h2,
@@ -68,7 +62,6 @@ main.wizard--bg-light {
       margin-bottom: 0;
     }
 
-
     background: $color-gradient-blue;
     background-clip: text;
     -webkit-background-clip: text;
@@ -82,36 +75,5 @@ main.wizard--bg-light {
     font-family: $font-family;
     font-size: 1rem;
     line-height: 1.6;
-  }
-}
-
-/* ------------------------------
-   Shared Background Image Styles
------------------------------- */
-main.wizard--bg-dark,
-main.wizard--bg-light {
-  background-image: url('mymsd-unity-pattern.svg');
-  background-repeat: no-repeat;
-  background-size: auto;
-}
-
-@include media('tablet') {
-  main.wizard--bg-dark,
-  main.wizard--bg-light {
-    background-position: top right;
-  }
-}
-
-@include media('desktop') {
-  main.wizard--bg-dark,
-  main.wizard--bg-light {
-    background-position: bottom left;
-  }
-}
-
-@media (max-width: 743px) {
-  main.wizard--bg-dark,
-  main.wizard--bg-light {
-    background-image: none;
   }
 }
