--- a/styles/main.scss
+++ b/styles/main.scss
@@ -31,15 +31,61 @@
 // Components
 @use './components';
 
+// Repeating pattern in the dark and light gradients for the Wizard JSP
 main.wizard--bg-dark {
-  background: linear-gradient(135deg, #017AC9 25%, #134276 100%) !important;
+  background-image:
+          url('../images/mymsd-unity-pattern-bottom-left.svg'),
+          linear-gradient(135deg, #017AC9 25%, #134276 100%);
+  background-repeat: no-repeat, no-repeat;
+  background-position: bottom left, center;
+  background-size: clamp(600px, 45vw, 1000px), cover;
   color: #fff;
 }
 
 main.wizard--bg-light {
-  background: linear-gradient(135deg, #E6F2FA 25%, #BFDEF1 100%) !important;
+  background-image:
+          url('../images/mymsd-unity-pattern-bottom-left.svg'),
+          linear-gradient(135deg, #E6F2FA 25%, #BFDEF1 100%);
+  background-repeat: no-repeat, no-repeat;
+  background-position: bottom left, center;
+  background-size: clamp(600px, 45vw, 1000px), cover;
   color: #333;
 }
+
+/* Tablet: use top-right pattern instead */
+@media (max-width: 1279px) and (min-width: 744px) {
+  main.wizard--bg-dark {
+    background-image:
+            url('../images/mymsd-unity-pattern-top-right.svg'),
+            linear-gradient(135deg, #017AC9 25%, #134276 100%);
+    background-position: top right, center;
+  }
+
+  main.wizard--bg-light {
+    background-image:
+            url('../images/mymsd-unity-pattern-top-right.svg'),
+            linear-gradient(135deg, #E6F2FA 25%, #BFDEF1 100%);
+    background-position: top right, center;
+  }
+}
+
+/* Mobile: remove only the pattern, keep gradient */
+@media (max-width: 743px) {
+  main.wizard--bg-dark {
+    background-image: linear-gradient(135deg, #017AC9 25%, #134276 100%);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  main.wizard--bg-light {
+    background-image: linear-gradient(135deg, #E6F2FA 25%, #BFDEF1 100%);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+}
+
 
 
 
