--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -296,6 +296,9 @@ main.wizard--bg-light {
   }
 }
 
+// Background pattern and gradients
+
+
 main.wizard--bg-dark,
 main.wizard--bg-light {
   position: relative;
