--- a/styles/settings/_fonts.scss
+++ b/styles/settings/_fonts.scss
@@ -110,3 +110,15 @@ $size-font-hint: clamp(15px, 1.1vw, 18px); // same as base font size
 $size-font-input-text: clamp(18px, 1.25vw, 20px);
 $size-font-label: clamp(18px, 1.25vw, 20px);
 
+// form hero
+main.wizard--bg-dark .p-large {
+  font-size: clamp(15px, 1.25vw, 17px); // 15 → 16 → 17
+}
+
+main.wizard--bg-dark .subtitle {
+  font-size: clamp(24px, 4vw, 32px); // 24 → 28 → 32
+  font-style: normal;
+}
+
+
+
