feat(form) Added pill variant for checkbox group. icons for full time and part time

--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -60,6 +60,14 @@
     .radio-group--with-icon--car-on {
         content: url('../../../../icons/icon-car-on.svg');
     }
+    
+    .radio-group--with-icon--full-time {
+        content: url('../../../../icons/icon-full-time.svg');
+    }
+
+    .radio-group--with-icon--part-time {
+        content: url('../../../../icons/icon-part-time.svg');
+    }
 
     .radio-group--with-icon--list-search-1 {
         content: url('../../../../icons/icon-streamline.svg');
