--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -40,7 +40,11 @@
   }
 
   // First screen JSP
-  .current-wizard-step:is([data-index='0'], [data-index='1']) {
+  .current-wizard-step:is(
+      [data-index='0'],
+      [data-index='1'],
+      [data-index='4']
+    ) {
     padding-top: $spacing-600;
     // Extra space at the bottom
     // Because of fix nav
@@ -51,7 +55,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
+        // align-items: center;
         padding-top: 96px;
         padding-bottom: 128px;
       }
@@ -60,7 +64,11 @@
 
   // Exclude current component being styled for Bootstrap
   // data-index="0" = first screen
-  .current-wizard-step:not([data-index='0'], [data-index='1']) {
+  .current-wizard-step:not(
+      [data-index='0'],
+      [data-index='1'],
+      [data-index='4']
+    ) {
     @include media('desktop') {
       padding: $spacing-600 0;
       margin: 32px auto;
