--- a/blocks/form/components/languagepanel/languagepanel.css
+++ b/blocks/form/components/languagepanel/languagepanel.css
@@ -1,3 +1,3 @@
-main .form form .panel-repeatable-panel__languagepanel [name=proficiency]{display:none}
+main .form form .panel-repeatable-panel__languagepanel [name=proficiency]{display:none}.field-panel-english-skills [class*=field-wrapper] h3{padding-bottom:0;margin-bottom:1rem}.field-panel-english-skills [class*=field-wrapper] h3 + p{color:#333333;margin-bottom:2rem}.field-panel-english-skills [class*=field-wrapper] legend.field-label{margin-bottom:0.5rem}.field-panel-english-skills [class*=field-wrapper] label.field-label{margin-bottom:0}.field-panel-english-skills [class*=field-wrapper] .checkbox-wrapper:not(:last-child){margin-bottom:0.5rem}
 
 /*# sourceMappingURL=languagepanel.css.map */
