--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -17,19 +17,20 @@
 .wizard--bg-light {
   .wizard {
     background: linear-gradient(
-      135deg,
-      $color-shade-blue-10 25%,
-      $color-shade-blue-25 100%
+                    135deg,
+                    $color-shade-blue-10 25%,
+                    $color-shade-blue-25 100%
     );
+    padding-bottom: 75px; // testing
   }
 }
 
-.wizard {
+/*.wizard {
   background: linear-gradient(
     135deg,
     $color-accent 25%,
     $color-primary-navy 100%
-  );
+  );*/
 
   .current-wizard-step {
     @include media('tablet') {
