--- a/blocks/form/components/workexperience/workexperience.css
+++ b/blocks/form/components/workexperience/workexperience.css
@@ -1,3 +1,3 @@
-main.wizard--bg-dark p.p-large{font-size:clamp(0.9375rem, 1.25vw, 1.0625rem)}main.wizard--bg-dark p.subtitle{font-size:clamp(1.5rem, 4vw, 2rem);font-style:normal}main .form form .panel-repeatable-panel__workexperience .repeatable-entry__title{font-size:clamp(1.0625rem, 1.5vw, 1.25rem);line-height:160%;font-weight:700}main .form form .panel-repeatable-panel__workexperience .repeatable-entry__workperiod{color:#706868;margin-top:0.5rem}
+main.wizard--bg-dark .p-large{font-size:clamp(0.9375rem, 1.25vw, 1.0625rem)}main.wizard--bg-dark .subtitle{font-size:clamp(1.5rem, 4vw, 2rem);font-style:normal}main .form form .panel-repeatable-panel__workexperience .repeatable-entry__title{font-size:clamp(1.0625rem, 1.5vw, 1.25rem);line-height:160%;font-weight:700}main .form form .panel-repeatable-panel__workexperience .repeatable-entry__workperiod{color:#706868;margin-top:0.5rem}
 
 /*# sourceMappingURL=workexperience.css.map */
