--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -289,18 +289,16 @@ main.wizard--bg-light {
   p,
   .subtitle,
   .straptitle {
-    /*color: $text-secondary;*/
-    color:$text-primary;
+    color: $text-secondary;
     font-family: $font-family;
     font-size: 1rem;
     line-height: 1.6;
   }
 }
 
-
-
-
 // Background pattern and gradients
+
+
 main.wizard--bg-dark,
 main.wizard--bg-light {
   position: relative;
@@ -330,18 +328,13 @@ main.wizard--bg-light::before {
 @include media('tablet') {
   main.wizard--bg-dark::before,
   main.wizard--bg-light::before {
-    top: 100px;
-    background-image: url('../../images/mymsd-unity-pattern-top-right.svg');
     background-position: top right;
-    background-repeat: no-repeat;
-    background-size: auto;
   }
 }
 
 @include media('desktop') {
   main.wizard--bg-dark::before,
   main.wizard--bg-light::before {
-    background-image: url('../../images/mymsd-unity-pattern-bottom-left.svg');
     background-position: bottom left;
   }
 }
