sepd-1217 add suggested skills datasource

--- a/blocks/form/components/search-box/search-box.scss
+++ b/blocks/form/components/search-box/search-box.scss
@@ -47,11 +47,13 @@
   color: $text-secondary;
 }
 
-.selected-cards-wrapper {
+.selected-cards-wrapper,
+.suggested-skills-cards-wrapper {
   margin-top: 1rem;
 }
 
-.selected-cards {
+.selected-cards,
+.suggested-skills-cards {
   display: flex;
   flex-wrap: wrap;
   gap: 9px;
