--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -297,8 +297,6 @@ main.wizard--bg-light {
 }
 
 // Background pattern and gradients
-
-
 main.wizard--bg-dark,
 main.wizard--bg-light {
   position: relative;
@@ -328,13 +326,18 @@ main.wizard--bg-light::before {
 @include media('tablet') {
   main.wizard--bg-dark::before,
   main.wizard--bg-light::before {
+    top: 100px;
+    background-image: url('../../images/mymsd-unity-pattern-top-right.svg');
     background-position: top right;
+    background-repeat: no-repeat;
+    background-size: auto;
   }
 }
 
 @include media('desktop') {
   main.wizard--bg-dark::before,
   main.wizard--bg-light::before {
+    background-image: url('../../images/mymsd-unity-pattern-bottom-left.svg');
     background-position: bottom left;
   }
 }
