sepd-1217 add suggested skills datasource

--- a/blocks/form/components/search-box/search-box.scss
+++ b/blocks/form/components/search-box/search-box.scss
@@ -48,12 +48,12 @@
 }
 
 .selected-cards-wrapper,
-.suggested-skills-cards-wrapper {
+.recommendations-cards-wrapper {
   margin-top: 1rem;
 }
 
 .selected-cards,
-.suggested-skills-cards {
+.recommendations-cards {
   display: flex;
   flex-wrap: wrap;
   gap: 9px;
